# securevault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: rust.yml
docs/: architecture.mmd  security_flow.mmd
examples/: basic.rs  error_handling.rs  transaction_history.rs  transfer.rs
src/: lib.rs  main.rs
tests/: test_main.rs
