[package]
name = "securevault"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "Cryptocurrency custody system with multi-signature wallets and HSM integration"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
